[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerlens-recon"
version = "0.1.0"
description = "Payment reconciliation CLI (portfolio/demo project)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "SQLAlchemy>=2.0.0",
  "psycopg2-binary>=2.9.9",
  "openpyxl>=3.1.2",
]

[tool.setuptools]
packages = ["ledgerlens_recon"]